# Apziva-Project-Happy-Customers

./: Makefile  README.md  pyproject.toml  requirements.txt  test.py
data/interim/: feature_selection_statistical_tests.csv  renamed_customer_survey.csv
data/processed/: final_x_test.csv  final_x_train.csv  final_y_test.csv  final_y_train.csv
happy_customers/: features.py  plots.py
happy_customers/data/: load_data.py  test.py
happy_customers/models/: models_baseline.py  models_fine_tuned.py
models/: tuned_models_testset_performance.csv  un_tuned_models_testset_performance.csv  un_tuned_models_trainingset_performance.csv
notebooks/: HappyCustomers.ipynb
reports/: HappyCustomers.html
